[package]
name = "web-service"
version = "0.1.0"
edition = "2021"
default-run = "server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"

[dependencies]
actix-web = "4.5.1"
chrono = { version = "0.4.37", features = ["serde"] }
dotenv = "0.15.0"
serde = { version = "1.0.197", features = ["derive"] }
slog = "2.7.0"
slog-async = "2.8.0"
slog-term = "2.9.1"
